--- a/index.html
+++ b/index.html
@@ -4,6 +4,127 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <body></body>
+
+  <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="index.html">My Portfolio</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="exp.html">Experience</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="gallery.html">Gallery</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link" href="cont.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="d-flex justify-content-center align-item-center mx-auto gap-3 mt-5">
+      <img src="images/me.jpg" class="rounded" style="width: 11rem" alt="me" />
+      <div class="d-none d-sm-block">
+        <p class="display-6 mb-3 fw-semibold">PAKIN NAKAPONG</p>
+        <p class="text-muted fs-5">
+          Hello, my name is First. <br />I'm studying Computer Engineering at
+          Chiang Mai University.
+        </p>
+      </div>
+    </div>
+    <div class="d-block d-sm-none mt-3" style="text-align: center">
+      <p class="display-6 mb-3 fw-semibold">PAKIN NAKAPONG</p>
+    </div>
+    <p style="text-align: center; font-size: 1.5rem" class="mt-4 fw-semibold">
+      Skills
+    </p>
+    <div style="max-width: 700px" class="mx-auto px-3">
+      <div class="d-flex border mb-3 shadow-sm my-rounded-all">
+        <div class="my-rounded-left">
+          <img
+            src="images/IMG_0217.jpg"
+            width="150px"
+            height="150px"
+            style="object-fit: cover"
+            class="my-rounded-left d-none d-sm-block"
+          />
+        </div>
+        <div class="p-4">
+          <p class="fw-semibold fs-5">Photos</p>
+          <span class="text-muted">
+            I had the opportunity to be a photographer for the school, which
+            significantly increased my experience in photography.
+          </span>
+        </div>
+      </div>
+
+      <div class="d-flex border mb-3 shadow-sm my-rounded-all">
+        <div class="p-4">
+          <p class="fw-semibold fs-5">Coding</p>
+          <span class="text-muted">
+            Learning C++ gave me programming knowledge and the ability to write
+            basic programs.
+          </span>
+        </div>
+        <div class="my-rounded-right">
+          <img
+            src="images/cpp.png"
+            width="150px"
+            height="150px"
+            style="object-fit: cover"
+            class="my-rounded-right d-none d-sm-block"
+          />
+        </div>
+      </div>
+
+      <div class="d-flex border mb-3 shadow-sm my-rounded-all">
+        <div class="my-rounded-left">
+          <img
+            src="images/menu.png"
+            width="150px"
+            height="150px"
+            style="object-fit: cover"
+            class="my-rounded-left d-none d-sm-block"
+          />
+        </div>
+        <div class="p-4">
+          <p class="fw-semibold fs-5">Games Design</p>
+          <span class="text-muted">
+            I have experience, knowledge, and the ability to design basic games
+            using C++.
+          </span>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
